login y logout de admin funciona

--- a/src/views/template/adminheader.ejs
+++ b/src/views/template/adminheader.ejs
@@ -28,7 +28,9 @@
                     <a class="nav-link" href="/wpost">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Salir</a>
+                    <form action="/logout" method="post">
+                        <button class="logoutb" type="submit">Salir</a></button>
+                    </form>
                 </li>
             </ul>
         </div>
